dist/docs/3.0.16/reference/versions.mdx
---
title: Versions & Compatibility
sidebarTitle: Versions
description: "Every published AdCP version, its status, and its end-of-life date. Start here if you're choosing or upgrading a version."
"og:title": "AdCP — Versions & Compatibility"
---

## At a glance

<Info>
**Choosing today:** stable production integrations use 3.0 with wire pin `"3.0"`. 3.1 validation uses the current RC, `v3.1.0-rc.9`, with wire pin `"3.1-rc.9"`. After GA, 3.1 integrations use wire pin `"3.1"`.
</Info>

| Status | Versions | Wire pin | What it means |
|---|---|---|---|
| **Active** | 3.0 (current stable: 3.0.15) | `"3.0"` | Stable default for production integrations. Receives feature and security patches. |
| **Validation** | 3.1 (current RC: `v3.1.0-rc.9`) | `"3.1-rc.9"` during validation; `"3.1"` at GA | Feature-complete minor release validating through RC artifacts. See [What's New in AdCP 3.1](/dist/docs/3.0.16/reference/whats-new-in-3-1) for the final feature set. |
| **Security-only** | 2.5.0, 2.5.1, 2.5.3 | `"2.5"` | Security patches through **August 1, 2026 (UTC)**. Not safe for AAO-network production — see [v2 sunset](/dist/docs/3.0.16/reference/v2-sunset). |
| **End of life** | 2.0.0, 2.1.0 | — | No patches. Migrate to 3.0. |
| **Planned** | 3.2, 4.0 | — | Targets in [planned releases](/dist/docs/3.0.16/reference/versioning#planned-releases). |

**Wire values are release-precision only.** Send `"3.0"` for the stable 3.0 line, exact pre-release pins such as `"3.1-rc.9"` while validating 3.1, and `"3.1"` only after GA. Do not send patch components like `"3.0.15"` or full semver pre-release values like `"3.1.0-rc.9"`. See [patches are not negotiated](/dist/docs/3.0.16/reference/versioning#patches-are-not-negotiated).

*Status legend: Active = current stable generation. Validation = feature-complete release candidate, not GA. Security-only = patches for security issues only, no features. End of life = no patches. Planned = not yet released.*

## All published versions

### 3.x — current generation

| Version | Released | Notes |
|---|---|---|
| 3.0.0 | 2026-04-22 | GA — stable baseline for the 3.x cycle. |
| 3.0.1 through 3.0.10 | 2026-04-28 to 2026-05-10 | Patches. Wire-compatible with 3.0.0. |
| 3.0.11 through **3.0.15** | 2026-05-11 to 2026-05-31 | Patches. **3.0.15 is the latest stable patch.** Wire-compatible with 3.0.0. |
| 3.1.0-rc.1 through **3.1.0-rc.9** | 2026-05-29 to 2026-06-05 | Feature-complete 3.1 validation train. Current published RC is `v3.1.0-rc.9`; use wire pin `"3.1-rc.9"` during validation and `"3.1"` only after GA. See [What's New in AdCP 3.1](/dist/docs/3.0.16/reference/whats-new-in-3-1) for the final feature list. |

Patches don't change the wire contract. Upgrading within 3.0.x is always safe. 3.1 RC artifacts validate the next minor release; they are pinned exactly during validation and collapse to the `"3.1"` wire value at GA. For per-version detail, see [Release Notes](/dist/docs/3.0.16/reference/release-notes) (curated narrative) and the [Changelog](/dist/docs/3.0.16/reference/changelog) (full technical history).

### Prereleases (superseded)

| Version | Released | Notes |
|---|---|---|
| 3.0.0-beta.1 through rc.2 | 2026-01-26 to 2026-03-15 | Superseded. |
| 3.0.0-rc.3 | 2026-04-01 | Superseded by GA. See [prerelease upgrade notes](/dist/docs/3.0.16/reference/migration/prerelease-upgrades) if you adopted rc.3. |

### 2.x — sunsetting

| Version | Released | Notes |
|---|---|---|
| 2.0.0 | 2025-10-15 | End of life. No patches. Migrate to 3.0. |
| 2.1.0 | 2025-10-19 | End of life. No patches. Migrate to 3.0. |
| 2.5.0 | 2025-11-22 | Security-only through Aug 1, 2026 (UTC). |
| 2.5.1 | 2025-12-24 | Security-only through Aug 1, 2026 (UTC). |
| 2.5.3 | January 2026 | Security-only through Aug 1, 2026 (UTC). **Last 2.x release.** |

After August 1, 2026 (UTC), the entire 2.x line is fully deprecated. The 2.x schema URLs continue to resolve so existing integrations don't break silently, but those schemas receive no further updates. See [v2 Sunset](/dist/docs/3.0.16/reference/v2-sunset) for migration paths.

## FAQ

### What's "current"?
For stable production, **3.0.15** is current; pin your integration to `"3.0"` (not `"3.0.15"`). For 3.1 validation, the current published RC is **v3.1.0-rc.9**; pin to `"3.1-rc.9"` until GA, then use `"3.1"`. See [Version negotiation](/dist/docs/3.0.16/reference/versioning#version-negotiation).

### What happened to 2.2, 2.3, 2.4, 2.6?
The 2.x line skipped version numbers during its working-group cycle. Some appear as in-flight changelog entries but were never released — the changes were rolled forward into the next published version or deferred to 3.0. The five published 2.x releases are 2.0.0, 2.1.0, 2.5.0, 2.5.1, and 2.5.3.

### Can I still register a v2 agent?
Yes — v2 agents can be registered in the AAO registry but cannot be AAO Verified. Certification and verified-default discovery require v3.x. See [v2 Sunset → If you use the AAO registry](/dist/docs/3.0.16/reference/v2-sunset#if-you-use-the-aao-registry).

### How long will 3.0 be supported?
At least 12 months after 4.0 GA. See [Versioning → Support window for previous major](/dist/docs/3.0.16/reference/versioning#support-window-for-previous-major).

### Where is 4.0?
Targeted for early 2027. 3.x is mid-cycle — see the [planned releases table](/dist/docs/3.0.16/reference/versioning#planned-releases).

## Choosing a version

| If you are… | Use |
|---|---|
| Building a production integration today | **3.0** (latest stable patch). Pin `"3.0"` on the wire. |
| Validating the final 3.1 feature set before GA | **3.1.0-rc.9**. Pin `"3.1-rc.9"` on the wire, read [What's New in AdCP 3.1](/dist/docs/3.0.16/reference/whats-new-in-3-1), and move to `"3.1"` at GA. |
| Running a 2.5.x integration | Migrate to 3.0 before **Aug 1, 2026 (UTC)**. Start with the [migration guide](/dist/docs/3.0.16/reference/migration). |
| Running a 2.0 or 2.1 integration | Upgrade now — out of support. |
| Trying a post-3.1 unreleased feature | See [Release Notes](/dist/docs/3.0.16/reference/release-notes), [Versioning & Governance](/dist/docs/3.0.16/reference/versioning), and [experimental status](/dist/docs/3.0.16/reference/experimental-status). |

## Related

- **[Versioning & Governance](/dist/docs/3.0.16/reference/versioning)** — release tiers, schema-change scope, cadence policy
- **[v2 Sunset](/dist/docs/3.0.16/reference/v2-sunset)** — full v2 end-of-life timeline and migration paths
- **[What's new in v3](/dist/docs/3.0.16/reference/whats-new-in-v3)** — feature-by-feature summary of what 3.0 adds
- **[What's New in AdCP 3.1](/dist/docs/3.0.16/reference/whats-new-in-3-1)** — final 3.1 feature set and adopter actions
- **[Release Notes](/dist/docs/3.0.16/reference/release-notes)** — curated narrative for each version
- **[Changelog](/dist/docs/3.0.16/reference/changelog)** — full technical change history
